--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -3,30 +3,24 @@
     android:layout_width="180dp"
     android:layout_height="210dp"
     android:background="@drawable/gradation">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <TextView
         android:layout_alignParentTop="true"
-        android:orientation="vertical">
+        android:id="@+id/textTitle"
+        android:layout_width="match_parent"
+        android:layout_height="33dp"
+        android:padding="5dp"
+        android:textColor="@color/white"
+        android:background="@drawable/gradation_blue"/>
+    <ScrollView
+        android:layout_below="@id/textTitle"
+        android:layout_width="match_parent"
+        android:layout_height="133dp">
         <TextView
-            android:layout_gravity="top"
-            android:id="@+id/textTitle"
-            android:layout_width="match_parent"
-            android:layout_height="33dp"
+            android:id="@+id/textContent"
             android:padding="5dp"
-            android:textColor="@color/white"
-            android:background="@drawable/gradation_blue"/>
-        <ScrollView
-            android:layout_margin="5dp"
-            android:layout_toEndOf="@id/textTitle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/textContent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </ScrollView>
-    </LinearLayout>
+            android:layout_height="wrap_content" />
+    </ScrollView>
     <Button
         android:id="@+id/buttonCancel"
         android:layout_width="match_parent"
