--- a/app/src/main/res/layout/activity_lecture.xml
+++ b/app/src/main/res/layout/activity_lecture.xml
@@ -47,6 +47,7 @@
             android:layout_height="40dp"
             android:weightSum="20">
             <TextView
+
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="년도"
@@ -55,6 +56,7 @@
                 android:background="@drawable/gradation_blue"
                 android:layout_weight="2"/>
             <Spinner
+                android:id="@+id/year"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"/>
@@ -67,6 +69,7 @@
                 android:background="@drawable/gradation_blue"
                 android:layout_weight="2"/>
             <Spinner
+                android:id="@+id/semester"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"/>
@@ -84,6 +87,7 @@
                 android:background="@drawable/gradation_blue"
                 android:layout_weight="2"/>
             <Spinner
+                android:id="@+id/type"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"/>
@@ -96,6 +100,7 @@
                 android:background="@drawable/gradation_blue"
                 android:layout_weight="2"/>
             <Spinner
+                android:id="@+id/major"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="5"/>
@@ -108,6 +113,7 @@
                 android:background="@drawable/gradation_blue"
                 android:layout_weight="2"/>
             <EditText
+                android:id="@+id/name"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="6"/>
