--- a/app/src/main/res/layout/activity_lecture.xml
+++ b/app/src/main/res/layout/activity_lecture.xml
@@ -124,7 +124,7 @@
         <Spinner
 
             android:id="@+id/sptest"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"></Spinner>
 
 
