--- a/app/src/main/res/layout/activity_lecture.xml
+++ b/app/src/main/res/layout/activity_lecture.xml
@@ -48,7 +48,7 @@
             android:weightSum="20">
             <TextView
 
-                android:layout_width="0dp"
+                android:layout_width="15dp"
                 android:layout_height="match_parent"
                 android:text="년도"
                 android:textAlignment="center"
@@ -57,11 +57,11 @@
                 android:layout_weight="2"/>
             <Spinner
                 android:id="@+id/year"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="3"/>
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="15dp"
                 android:layout_height="match_parent"
                 android:text="학기"
                 android:textAlignment="center"
@@ -70,7 +70,7 @@
                 android:layout_weight="2"/>
             <Spinner
                 android:id="@+id/semester"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="3"/>
 
@@ -81,7 +81,7 @@
             android:layout_height="40dp"
             android:weightSum="20">
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="15dp"
                 android:layout_height="match_parent"
                 android:text="교과"
                 android:textAlignment="center"
@@ -90,11 +90,11 @@
                 android:layout_weight="2"/>
             <Spinner
                 android:id="@+id/type"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="3"/>
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="15dp"
                 android:layout_height="match_parent"
                 android:text="전공"
                 android:textAlignment="center"
@@ -103,23 +103,28 @@
                 android:layout_weight="2"/>
             <Spinner
                 android:id="@+id/major"
-                android:layout_width="0dp"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_weight="5"/>
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="15dp"
                 android:layout_height="match_parent"
                 android:text="이름"
                 android:textAlignment="center"
                 android:gravity="center_vertical"
                 android:background="@drawable/gradation_blue"
                 android:layout_weight="2"/>
-            <Button
-                android:id="@+id/testbtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
 
+        </LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <Button
+        android:id="@+id/testbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</LinearLayout>
 
         <Spinner
 
