--- a/android/app/src/main/res/layout/activity_lecture.xml
+++ b/android/app/src/main/res/layout/activity_lecture.xml
@@ -1,130 +1,60 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:background="@drawable/gradation"
-    android:weightSum="10"
-    android:orientation="vertical">
-    <include layout="@layout/common_function_upper" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        android:weightSum="5"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
-            <include layout="@layout/common_function_table"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:layout_margin="5dp"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/textLecture"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="강의명"/>
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:weightSum="20">
-            <TextView
+<?xml version="1.0" encoding="UTF-8"?>
+    <LinearLayout android:orientation="vertical" android:weightSum="10" android:background="@drawable/gradation" android:layout_width="match_parent" android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+    <include layout="@layout/common_function_upper"/>
+    <LinearLayout android:orientation="horizontal" android:weightSum="5" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="4">
+    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="3" android:layout_margin="5dp">
+<include layout="@layout/common_function_table"/>
+</LinearLayout>
 
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="년도"
-                android:textAlignment="center"
-                android:gravity="center_vertical"
-                android:background="@drawable/gradation_blue"
-                android:layout_weight="2"/>
-            <Spinner
-                android:id="@+id/year"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="학기"
-                android:textAlignment="center"
-                android:gravity="center_vertical"
-                android:background="@drawable/gradation_blue"
-                android:layout_weight="2"/>
-            <Spinner
-                android:id="@+id/semester"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:weightSum="20">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="교과"
-                android:textAlignment="center"
-                android:gravity="center_vertical"
-                android:background="@drawable/gradation_blue"
-                android:layout_weight="2"/>
-            <Spinner
-                android:id="@+id/type"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="전공"
-                android:textAlignment="center"
-                android:gravity="center_vertical"
-                android:background="@drawable/gradation_blue"
-                android:layout_weight="2"/>
-            <Spinner
-                android:id="@+id/major"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="5"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="이름"
-                android:textAlignment="center"
-                android:gravity="center_vertical"
-                android:background="@drawable/gradation_blue"
-                android:layout_weight="2"/>
-            <EditText
-                android:id="@+id/name"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="6"/>
-        </LinearLayout>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"/>
-        </ScrollView>
-    </LinearLayout>
+
+    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="2" android:layout_margin="5dp">
+
+    <TextView android:layout_width="match_parent" android:layout_height="match_parent" android:text="강의명" android:id="@+id/textLecture"/>
+
+</LinearLayout>
+
+</LinearLayout>
+
+
+    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="6" android:layout_margin="5dp">
+
+
+    <LinearLayout android:weightSum="20" android:layout_width="match_parent" android:layout_height="40dp">
+
+    <TextView android:background="@drawable/gradation_blue" android:layout_width="15dp" android:layout_height="match_parent" android:layout_weight="2" android:text="년도" android:gravity="center_vertical" android:textAlignment="center"/>
+
+    <Spinner android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="3" android:id="@+id/year"/>
+
+    <TextView android:background="@drawable/gradation_blue" android:layout_width="15dp" android:layout_height="match_parent" android:layout_weight="2" android:text="학기" android:gravity="center_vertical" android:textAlignment="center"/>
+
+    <Spinner android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="3" android:id="@+id/semester"/>
+
+</LinearLayout>
+
+
+    <LinearLayout android:weightSum="20" android:layout_width="match_parent" android:layout_height="40dp">
+
+    <TextView android:background="@drawable/gradation_blue" android:layout_width="15dp" android:layout_height="match_parent" android:layout_weight="2" android:text="교과" android:gravity="center_vertical" android:textAlignment="center"/>
+
+    <Spinner android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="3" android:id="@+id/type"/>
+
+    <TextView android:background="@drawable/gradation_blue" android:layout_width="15dp" android:layout_height="match_parent" android:layout_weight="2" android:text="전공" android:gravity="center_vertical" android:textAlignment="center"/>
+
+    <Spinner android:layout_width="100dp" android:layout_height="match_parent" android:layout_weight="5" android:id="@+id/major"/>
+
+    <TextView android:background="@drawable/gradation_blue" android:layout_width="15dp" android:layout_height="match_parent" android:layout_weight="2" android:text="이름" android:gravity="center_vertical" android:textAlignment="center"/>
+
+</LinearLayout>
+
+
+    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
+
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/testbtn"/>
+
+</LinearLayout>
+
+    <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/sptest"/>
+
+</LinearLayout>
+
 </LinearLayout>
