--- a/android/app/src/main/res/layout/common_function_table.xml
+++ b/android/app/src/main/res/layout/common_function_table.xml
@@ -220,12 +220,14 @@
                 android:layout_weight="1"
                 android:layout_gravity="center|center_vertical"/>
         </LinearLayout>
-        <GridLayout
+        <GridView
+            android:id="@+id/gridView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:columnCount="6"
+            android:layout_weight="5"
+            android:columnCount="5"
+            android:rowCount="12"
             android:background="@color/white">
-        </GridLayout>
+        </GridView>
     </LinearLayout>
 </LinearLayout>
