--- a/android/app/src/main/res/layout/common_function_table.xml
+++ b/android/app/src/main/res/layout/common_function_table.xml
@@ -51,183 +51,11 @@
             android:text="FRI"
             android:textAlignment="center" />
     </LinearLayout>
-    <LinearLayout
+    <GridView
+        android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="6"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1"
-            android:background="@color/table_time"
-            android:weightSum="24">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="09:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="10:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="11:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="12:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="01:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="02:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="03:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="04:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="05:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="06:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="07:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"
-                android:textSize="8dp"
-                android:textColor="@color/login_input"
-                android:text="08:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center|center_vertical"/>
-        </LinearLayout>
-        <GridView
-            android:id="@+id/gridView"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:columnCount="5"
-            android:rowCount="12"
-            android:background="@color/white">
-        </GridView>
-    </LinearLayout>
+        android:numColumns="6"
+        android:background="@color/white">
+    </GridView>
 </LinearLayout>
