--- a/android/app/src/main/res/layout/grid_subject.xml
+++ b/android/app/src/main/res/layout/grid_subject.xml
@@ -4,4 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/grid_item"
-    android:gravity="center_vertical" />
+    android:textColor="@color/white"
+    android:gravity="center_vertical|center" />
