--- a/android/app/src/main/res/layout/activity_timetable.xml
+++ b/android/app/src/main/res/layout/activity_timetable.xml
@@ -12,28 +12,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="8"
+        android:layout_margin="5dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:textStyle="bold"
-                android:text="신청과목"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="8학점 (전선:2)\n주 4일제 수업"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="right|bottom">
             <TextView
@@ -66,23 +50,19 @@
                 android:textSize="20dp"
                 android:textColor="@color/white"
                 android:textStyle="bold"/>
-            <TextView
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:gravity="center|center_vertical"
-                android:text="o"
-                android:textSize="20dp"
-                android:textColor="@color/white"
-                android:textStyle="bold"/>
         </LinearLayout>
+        <include layout="@layout/common_function_table"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"
-        android:layout_margin="5dp">
-        <include layout="@layout/common_function_table"/>
+        android:layout_weight="1">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="넘어가기"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/login_button"
+            />
     </LinearLayout>
 </LinearLayout>
