--- a/android/app/src/main/res/layout/activity_timetable.xml
+++ b/android/app/src/main/res/layout/activity_timetable.xml
@@ -66,6 +66,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <Button
+            android:id="@+id/buttonOK"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="넘어가기"
