--- a/android/app/src/main/res/layout/activity_constraint.xml
+++ b/android/app/src/main/res/layout/activity_constraint.xml
@@ -77,6 +77,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="4"></ListView>
                 <Button
+                    android:id="@+id/buttonRe"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
