--- a/android/app/src/main/res/layout/activity_adapter.xml
+++ b/android/app/src/main/res/layout/activity_adapter.xml
@@ -7,22 +7,25 @@
 
 
     <TextView
+        android:gravity="center"
         android:id="@+id/retake"
         android:text="Zaesugang"
         android:layout_width="50dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="50dp" />
 
     <TextView
+        android:gravity="center"
         android:id="@+id/mandate"
         android:text="Zunpill"
         android:layout_width="80dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="50dp" />
 
     <TextView
+        android:gravity="center"
         android:id="@+id/name"
         android:text="name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="50dp" />
 
 
 
