--- a/android/app/src/main/res/layout/activity_look.xml
+++ b/android/app/src/main/res/layout/activity_look.xml
@@ -11,12 +11,14 @@
 
         <Button
 
+            android:backgroundTint="@color/login_button"
             android:text="add"
             android:id="@+id/btnadd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <Button
+            android:backgroundTint="@color/login_button"
             android:text="delete"
             android:id="@+id/btndel"
             android:layout_width="wrap_content"
@@ -27,6 +29,7 @@
 
 
     <ListView
+
 
         android:id="@+id/lv"
         android:layout_width="wrap_content"
