--- a/android/app/src/main/res/layout/activity_subject.xml
+++ b/android/app/src/main/res/layout/activity_subject.xml
@@ -30,6 +30,7 @@
 
     <Button
 
+        android:backgroundTint="@color/login_button"
         android:text="back"
         android:id="@+id/btnback"
         android:layout_width="wrap_content"
