--- a/android/app/src/main/res/layout/activity_constraint.xml
+++ b/android/app/src/main/res/layout/activity_constraint.xml
@@ -20,7 +20,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_weight="4"
         android:orientation="horizontal"
         android:weightSum="2">
         <RelativeLayout
@@ -72,10 +72,16 @@
                 android:orientation="vertical"
                 android:weightSum="5"
                 android:background="@color/white">
-                <ListView
+                <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="4"></ListView>
+                    android:layout_weight="4">
+                    <TextView
+                        android:id="@+id/textRe"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/login_input"/>
+                </ScrollView>
                 <Button
                     android:id="@+id/buttonRe"
                     android:layout_width="match_parent"
@@ -180,4 +186,12 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+    <Button
+        android:id="@+id/buttonRecommend"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:textColor="@color/white"
+        android:text="추천 받기"
+        android:backgroundTint="@color/login_button"/>
 </LinearLayout>
